; ModuleID = '/home/carl/AnghaBench/kphp-kdb/common/extr_md5.c_md5_hmac.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/common/extr_md5.c_md5_hmac.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @md5_hmac(i8* %0, i32 %1, i8* %2, i32 %3, i8* %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  store i8* %0, i8** %6, align 8
  store i32 %1, i32* %7, align 4
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  store i8* %4, i8** %10, align 8
  %12 = load i8*, i8** %6, align 8
  %13 = load i32, i32* %7, align 4
  %14 = call i32 @md5_hmac_starts(i32* %11, i8* %12, i32 %13)
  %15 = load i8*, i8** %8, align 8
  %16 = load i32, i32* %9, align 4
  %17 = call i32 @md5_hmac_update(i32* %11, i8* %15, i32 %16)
  %18 = load i8*, i8** %10, align 8
  %19 = call i32 @md5_hmac_finish(i32* %11, i8* %18)
  %20 = call i32 @memset(i32* %11, i32 0, i32 4)
  ret void
}

declare dso_local i32 @md5_hmac_starts(i32*, i8*, i32) #1

declare dso_local i32 @md5_hmac_update(i32*, i8*, i32) #1

declare dso_local i32 @md5_hmac_finish(i32*, i8*) #1

declare dso_local i32 @memset(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
